After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759902 - glshader: fix usage documentation
glshader: fix usage documentation
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-12-27 10:40 UTC by Florent Thiéry
Modified: 2015-12-28 08:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-glshader-fix-usage-doc.patch (1.36 KB, patch)
2015-12-27 10:43 UTC, Florent Thiéry
committed Details | Review

Description Florent Thiéry 2015-12-27 10:40:44 UTC
The current docstring of glshader is still referring to the location property (which has been changed in favor of the fragment/vertex string properties
Comment 1 Florent Thiéry 2015-12-27 10:43:29 UTC
Created attachment 317922 [details] [review]
0001-glshader-fix-usage-doc.patch
Comment 2 Sebastian Dröge (slomo) 2015-12-28 08:45:27 UTC
Even better would of course be some documentation how the shader has to look
like :)

commit 15a28c8024def3fe8724376d87983a1f7667bae8
Author: Florent Thiéry <florent.thiery@ubicast.eu>
Date:   Sun Dec 27 11:37:09 2015 +0100

    glshader: fix usage doc
    
    The property location has been changed in favor of vertex/fragment
    string properties; the doc had not been updated and was still referring
    to the previous property; also, now the #version header has become mandatory
    
    https://bugzilla.gnome.org/show_bug.cgi?id=759902